@@ -19,8 +19,7 @@
 
   <utility
       factory=".vocabularies.displaypropertiesVocab"
-      name="displaypropertiesVocab" />
-      <!-- plone 4.1 robert@redcor.ch 
-      provides="zope.app.schema.vocabulary.IVocabularyFactory" /-->
+      name="displaypropertiesVocab"
+      provides="zope.schema.interfaces.IVocabularyFactory" />
 
 </configure>
